preview image updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SATI ChatBot - Your Institute Guide</title>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="https://sati-chatbot.vercel.app/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/">
 
     <!-- Primary Meta Tags -->
@@ -156,7 +156,7 @@
             "@type": "EducationalOrganization",
             "name": "Samrat Ashok Technological Institute",
             "alternateName": "SATI Vidisha",
-            "url": "https://sati.ac.in/",
+            "url": "https://satiengg.in/",
             "address": {
                 "@type": "PostalAddress",
                 "addressLocality": "Vidisha",
