--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About SATI ChatBot - AI Assistant for Engineering Students | Team NeoCoders</title>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="https://sati-chatbot.vercel.app/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/about.html">
 
     <!-- Primary Meta Tags -->
