--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact SATI ChatBot Team - Support & Feedback | Team NeoCoders</title>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="https://sati-chatbot.vercel.app/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/contact.html">
 
     <!-- Primary Meta Tags -->
