--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - SATI ChatBot | Data Protection & User Privacy</title>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="htttps://sati-chatbot.vercel.app/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/privacy-policy.html">
 
     <!-- Primary Meta Tags -->
