some pages size reduced for mobile

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -273,15 +273,48 @@
         @media (max-width: 768px) {
             .terms-container {
                 padding: 1rem;
-                max-width: 95vw;
+                max-width: 100vw;
             }
 
             .terms-header h1 {
                 font-size: 2rem;
             }
 
+            .terms-header p {
+                font-size: 0.95rem;
+            }
+
             .terms-content {
                 padding: 1.5rem;
+            }
+
+            .terms-section h2 {
+                font-size: 1.3rem;
+            }
+
+            .terms-section h3 {
+                font-size: 1.1rem;
+            }
+
+            .terms-section p {
+                font-size: 0.9rem;
+                line-height: 1.5;
+            }
+
+            .terms-section li {
+                font-size: 0.9rem;
+                line-height: 1.5;
+            }
+
+            .highlight-box,
+            .warning-box,
+            .info-box {
+                font-size: 0.9rem;
+                padding: 0.8rem;
+            }
+
+            .last-updated {
+                font-size: 0.85rem;
             }
 
             /* Reduce animation delays on mobile for better performance */
