--- a/404.html
+++ b/404.html
@@ -341,7 +341,7 @@
             .error-content {
                 padding: 1rem;
                 margin: 0 -1rem;
-                max-width: 90vw;
+                max-width: 100vw;
             }
 
             .error-icon {
@@ -353,7 +353,26 @@
             }
 
             .error-subtitle {
-                font-size: 1.2rem;
+                font-size: 1.1rem;
+            }
+
+            .error-message {
+                font-size: 0.95rem;
+                line-height: 1.5;
+            }
+
+            .error-btn {
+                font-size: 0.9rem;
+                padding: 0.7rem 1.3rem;
+            }
+
+            .suggestions h3 {
+                font-size: 1.1rem;
+            }
+
+            .suggestions li {
+                font-size: 0.9rem;
+                line-height: 1.5;
             }
 
             .error-actions {
