--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -257,15 +257,46 @@
         @media (max-width: 768px) {
             .privacy-container {
                 padding: 1rem;
-                max-width: 95vw;
+                max-width: 100vw;
             }
 
             .privacy-header h1 {
                 font-size: 2rem;
             }
 
+            .privacy-header p {
+                font-size: 0.95rem;
+            }
+
             .privacy-content {
                 padding: 1.5rem;
+            }
+
+            .privacy-section h2 {
+                font-size: 1.3rem;
+            }
+
+            .privacy-section h3 {
+                font-size: 1.1rem;
+            }
+
+            .privacy-section p {
+                font-size: 0.9rem;
+                line-height: 1.5;
+            }
+
+            .privacy-section li {
+                font-size: 0.9rem;
+                line-height: 1.5;
+            }
+
+            .highlight-box {
+                font-size: 0.9rem;
+                padding: 0.8rem;
+            }
+
+            .last-updated {
+                font-size: 0.85rem;
             }
 
             /* Reduce animation delays on mobile for better performance */
