--- a/404.html
+++ b/404.html
@@ -732,7 +732,8 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="resources/materials.html">Materials</a></li>
+                     <li><a href="/resources/materials.html">Materials</a></li>
+                    <li><a href="/resources/programming.html">Programming</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -747,10 +748,10 @@
             <div class="footer-section">
                 <h3>Connect with Us</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/itz_safal_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/sati_chatbot/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/safal-tiwari/" target="_blank"><i
                             class="fab fa-linkedin"></i></a>
-                    <a href="https://www.github.com/SAFAL-TIWARI/" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/SAFAL-TIWARI/SATI-ChatBot" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
