--- a/resources/materials.html
+++ b/resources/materials.html
@@ -394,10 +394,10 @@
             <div class="footer-section">
                 <h3>Connect with Us</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/itz_safal_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/sati_chatbot/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/safal-tiwari/" target="_blank"><i
                             class="fab fa-linkedin"></i></a>
-                    <a href="https://www.github.com/SAFAL-TIWARI/" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/SAFAL-TIWARI/SATI-ChatBot" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
