Programming page created

--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,8 @@
                 <div class="nav-dropdown">
                     <span class="dropdown-toggle">Resources <i class="fas fa-chevron-down"></i></span>
                     <div class="dropdown-menu">
-                        <a href="resources/materials.html" class="dropdown-item">Materials</a>
-                        <a href="#" class="dropdown-item disabled">Programming <span class="coming-soon">(Coming
-                                Soon)</span></a>
+                        <a href="/resources/materials.html" class="dropdown-item active">Materials</a>
+                        <a href="/resources/programming.html" class="dropdown-item">Programming</a>
                     </div>
                 </div>
                 <a href="about.html" class="nav-link">About</a>
@@ -188,9 +187,8 @@
                         <i class="fas fa-chevron-down mobile-dropdown-arrow"></i>
                     </a>
                     <div class="mobile-dropdown-menu">
-                        <a href="resources/materials.html" class="mobile-dropdown-item">Materials</a>
-                        <a href="#" class="mobile-dropdown-item disabled">Programming <span class="coming-soon">(Coming
-                                Soon)</span></a>
+                        <a href="/resources/materials.html" class="mobile-dropdown-item active">Materials</a>
+                        <a href="/resources/programming.html" class="mobile-dropdown-item">Programming</a>
                     </div>
                 </div>
                 <a href="about.html" class="mobile-nav-link">
