--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -396,9 +396,8 @@
                 <div class="nav-dropdown">
                     <a href="#" class="nav-link dropdown-toggle">Resources <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
-                        <a href="resources/materials.html" class="dropdown-item">Materials</a>
-                        <a href="#" class="dropdown-item disabled">Programming <span class="coming-soon">(Coming
-                                Soon)</span></a>
+                        <a href="/resources/materials.html" class="dropdown-item active">Materials</a>
+                        <a href="/resources/programming.html" class="dropdown-item">Programming</a>
                     </div>
                 </div>
                 <a href="about.html" class="nav-link">About</a>
@@ -443,9 +442,8 @@
                         <i class="fas fa-chevron-down mobile-dropdown-arrow"></i>
                     </a>
                     <div class="mobile-dropdown-menu">
-                        <a href="resources/materials.html" class="mobile-dropdown-item">Materials</a>
-                        <a href="#" class="mobile-dropdown-item disabled">Programming <span class="coming-soon">(Coming
-                                Soon)</span></a>
+                        <a href="/resources/materials.html" class="mobile-dropdown-item active">Materials</a>
+                        <a href="/resources/programming.html" class="mobile-dropdown-item">Programming</a>
                     </div>
                 </div>
                 <a href="about.html" class="mobile-nav-link">
