--- a/resources/programming.html
+++ b/resources/programming.html
@@ -263,31 +263,32 @@
                             <option value="css">CSS</option>
                             <option value="javascript">JavaScript</option>
                             <option value="java">Java</option>
-                            <option value="typescript">TypeScript</option>
-                            <option value="ruby">Ruby</option>
-                            <option value="php">PHP</option>
-                            <option value="swift">Swift</option>
-                            <option value="kotlin">Kotlin</option>
-                            <option value="go">Go</option>
-                            <option value="rust">Rust</option>
                         </select>
                     </div>
                     <div class="editor-actions">
-                        <button class="btn btn-run" id="runBtn">
-                            <i class="fas fa-play"></i>
-                            Run
+                        <button class="btn btn-run" id="runBtn" title="Run Code">
+                            <i class="fas fa-play" ></i>
+                            <!-- Run -->
                         </button>
-                        <button class="btn btn-download" id="downloadBtn">
+                        <button class="btn btn-preview" id="previewBtn" title="Live Preview">
+                            <i class="fas fa-eye"></i>
+                            <!-- Preview -->
+                        </button>
+                        <button class="btn btn-download" id="downloadBtn" title="Download Code">
                             <i class="fas fa-download"></i>
-                            Download
+                            <!-- Download -->
                         </button>
-                        <button class="btn btn-copy" id="copyBtn">
+                        <button class="btn btn-copy" id="copyBtn" title="Copy Code">
                             <i class="fas fa-copy"></i>
-                            Copy
+                            <!-- Copy -->
                         </button>
-                        <button class="btn btn-fullscreen" id="fullscreenBtn">
+                        <button class="btn btn-fullscreen" id="fullscreenBtn" title="Full Screen">
                             <i class="fas fa-expand"></i>
-                            Full
+                            <!-- Full -->
+                        </button>
+                        <button class="btn btn-clear-code" id="clearCodeBtn" title="Clear Code">
+                            <i class="fas fa-eraser"></i>
+                            <!-- Clear -->
                         </button>
                     </div>
                 </div>
