programming page customized

--- a/resources/materials.html
+++ b/resources/materials.html
@@ -218,7 +218,7 @@
         <!-- Left Sidebar -->
         <aside class="left-sidebar">
             <div class="sidebar-header">
-                <h2>Resources</h2>
+                <h2>Resources - 3<sup>rd</sup> Semester</h2>
             </div>
             <div class="sidebar-menu">
                 <div class="menu-item active" data-category="notes">
