--- a/resources/programming.html
+++ b/resources/programming.html
@@ -282,10 +282,6 @@
                             <i class="fas fa-copy"></i>
                             <!-- Copy -->
                         </button>
-                        <button class="btn btn-fullscreen" id="fullscreenBtn" title="Full Screen">
-                            <i class="fas fa-expand"></i>
-                            <!-- Full -->
-                        </button>
                         <button class="btn btn-clear-code" id="clearCodeBtn" title="Clear Code">
                             <i class="fas fa-eraser"></i>
                             <!-- Clear -->
@@ -323,7 +319,7 @@
             </div>
         </main>
 
-        <!-- Right Sidebar -->
+        <!-- Right Sidebar - Only shown on mobile -->
         <aside class="right-sidebar">
             <div class="sidebar-header">
                 <h3>Right Sidebar</h3>
